--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.1.3",
+    "create-react-class": "^15.7.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-cookie": "3.0.4",
     "react-dom": "^17.0.1",
     "react-router-dom": "4.3.1",
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^3.3.0"
   }
 }
