--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-cookie": "3.0.4",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "4.0.1",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "react-bootstrap-date-picker": "^5.1.0",
-    "react-datepicker": "^3.3.0"
+    "react-datepicker": "^3.3.0",
+    "react-native-datepicker": "^1.7.2"
   }
 }
